(executable
 (name fact)
 (modules fact)
 (libraries bechamel bechamel-js eqaf base64))

(rule
 (targets fact.json)
 (action
  (with-stdout-to
   %{targets}
   (run ./fact.exe))))

(rule
 (targets fact.html)
 (mode promote)
 (action
  (system "%{bin:bechamel-html} < %{dep:fact.json} > %{targets}")))